# palm_tree_detection

./: CMakeLists.txt  README.md
models/: hog_model.xml
src/: main.cpp
